# ironmill

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bench-showoff.toml  bench-test.toml  libtest_st_lifetime.rlib  spec.md  test_cli_mutual_exclusivity.sh  test_conflict2  verify_hadamard.rs  verify_hadamard_bin
crates/burn-coreml/: Cargo.toml  README.md
crates/burn-coreml/src/: export.rs  inference.rs  lib.rs
crates/candle-coreml/: Cargo.toml  README.md
crates/candle-coreml/src/: convert.rs  lib.rs  runtime.rs
crates/ironmill-ane/: Cargo.toml
crates/ironmill-ane-sys/: Cargo.toml  build.rs
crates/ironmill-ane-sys/objc/: safe_release.m
crates/ironmill-ane-sys/src/: buffers_ready.rs  client.rs  compiler.rs  device.rs  error.rs  events.rs  iosurface.rs  lib.rs  mapper.rs  model.rs  objc.rs  perf.rs  process.rs  program.rs  request.rs  runtime.rs  token.rs  util.rs  validate.rs  virtual_client.rs  weight.rs
crates/ironmill-ane-sys/tests/: ane_integration.rs  ane_probe.rs
crates/ironmill-ane/examples/: ane_dtype_probe.rs  ane_op_eval.rs  ane_op_fuzz.rs  ane_op_probe.rs  turboquant_bench.rs  turboquant_e2e_bench.rs
crates/ironmill-ane/src/: blobfile.rs  cache.rs  inference.rs  lib.rs  packing.rs  program.rs  runtime.rs  split.rs  tensor.rs  turboquant.rs  turboquant_mil.rs
crates/ironmill-bench/: Cargo.toml
crates/ironmill-bench/benches/: perplexity_math.rs  report_format.rs  stats.rs
crates/ironmill-bench/examples/: awq_block_calibrate.rs  awq_calibrate.rs  cache_bandwidth_bench.rs  fa2_prefill_bench.rs  kernel_bandwidth_bench.rs  turboquant_bench.rs  turboquant_e2e_bench.rs
crates/ironmill-bench/src/: baseline.rs  compiler.rs  config.rs  hardware.rs  inference.rs  main.rs  perplexity.rs  power.rs  quality.rs  report.rs  stats.rs  suite.rs
crates/ironmill-bench/src/suites/: context_decode.rs  coreml.rs  decode.rs  mod.rs  perplexity_metal.rs  prefill.rs  quality.rs
crates/ironmill-bench/tests/: gemma4_bench.rs  gptq_bench.rs  inference_e2e.rs  kernel_correctness.rs  polarquant_bench.rs  pq_diag.rs  qwen35_bench.rs
crates/ironmill-cli/: Cargo.toml
crates/ironmill-cli/src/: main.rs
crates/ironmill-cli/tests/: cli_integration.rs
crates/ironmill-compile/: Cargo.toml
crates/ironmill-compile/src/: c_api.rs  compile_target.rs  error.rs  lib.rs
crates/ironmill-compile/src/ane/: blobfile.rs  bundle.rs  cache.rs  decode_compile.rs  mil_text.rs  mod.rs  packing.rs  split.rs  validate.rs
crates/ironmill-compile/src/convert/: lora.rs  mod.rs  moe.rs  pipeline.rs
crates/ironmill-compile/src/coreml/: build_api.rs  compiler.rs  mod.rs
crates/ironmill-compile/src/gpu/: bundle.rs  mod.rs  streaming.rs
crates/ironmill-compile/src/templates/: config.rs  gemma.rs  llama.rs  mod.rs  moe.rs  qwen.rs  qwen35.rs  shared.rs
crates/ironmill-compile/src/weights/: calibration.rs  gguf.rs  mil_provider.rs  mod.rs  quantized.rs  safetensors.rs
crates/ironmill-compile/tests/: cross_feature.rs  gguf_e2e.rs  gpu_compile_e2e.rs  llm_features.rs  moe_features.rs  optimization_passes.rs  pipeline_features.rs  qwen_e2e.rs  safetensors_e2e.rs
crates/ironmill-compile/tests/common/: mod.rs
crates/ironmill-core/: Cargo.toml
crates/ironmill-core/src/: calibration.rs  chat.rs  dequant.rs  device.rs  error.rs  f16_utils.rs  gen_params.rs  lib.rs  model.rs  model_info.rs  rope.rs  text_output.rs  tokenizer.rs  weights.rs
crates/ironmill-core/src/ane/: bundle.rs  mil_text.rs  mod.rs  packing.rs
crates/ironmill-core/src/gpu/: bundle.rs
crates/ironmill-coreml/: Cargo.toml
crates/ironmill-coreml-sys/: Cargo.toml
crates/ironmill-coreml-sys/src/: lib.rs
crates/ironmill-coreml/src/: lib.rs
crates/ironmill-inference/: Cargo.toml  INSPECTION_REPORT.md  build.rs
crates/ironmill-inference/examples/: ane_op_eval.rs  cache_bandwidth_bench.rs  turboquant_bench.rs  turboquant_e2e_bench.rs
crates/ironmill-inference/src/: batch_runner.rs  dequant.rs  engine.rs  generate.rs  jit.rs  lib.rs  memory.rs  model_info.rs  sampling.rs  shader_cache.rs  types.rs  weight_loading.rs
crates/ironmill-inference/src/ane/: bundle_manifest.rs  decode.rs  device.rs  mod.rs  model.rs  runtime.rs
crates/ironmill-inference/src/cache/: mod.rs  policy.rs  prefix_cache.rs  radix_tree.rs
crates/ironmill-inference/src/calibration/: awq_store.rs  dataset.rs  gptq_store.rs  hook.rs  mod.rs  runner.rs
crates/ironmill-inference/src/coreml/: mod.rs  runtime.rs
crates/ironmill-inference/src/gpu/: bundle.rs  config.rs  dequant.rs  error.rs  inference.rs  mod.rs  ops.rs  weights.rs
crates/ironmill-inference/src/grammar/: _test_optional_comma.rs  automaton.rs  bnf.rs  compiler.rs  json_schema.rs  mask.rs  mod.rs
crates/ironmill-inference/src/metal/: attention.rs  buffers.rs  bundle.rs  calibration.rs  config.rs  dequant.rs  engine.rs  error.rs  (+14 more)
crates/ironmill-inference/tests/: gpu_polarquant_e2e.rs
crates/ironmill-iosurface/: Cargo.toml
crates/ironmill-iosurface/src/: lib.rs  surface.rs  tensor.rs
crates/ironmill-metal-sys/: Cargo.toml
crates/ironmill-metal-sys/src/: buffer.rs  command.rs  device.rs  error.rs  lib.rs  mps.rs  objc.rs  pipeline.rs  shader.rs
crates/ironmill-mlx-sys/: Cargo.toml  build.rs
crates/ironmill-mlx-sys/src/: array.rs  device.rs  error.rs  fast_ops.rs  lib.rs  metal_kernel.rs  ops.rs  stream.rs
crates/ironmill-runtime/: Cargo.toml
crates/ironmill-runtime/src/: lib.rs
crates/ironmill-torch/: Cargo.toml
crates/ironmill-torch/src/: chat.rs  error.rs  gen_params.rs  lib.rs  model.rs  text_output.rs
crates/mil-rs/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/mil-rs/benches/: passes.rs  pipeline.rs  weight_formats.rs
crates/mil-rs/examples/: convert_onnx.rs  inspect_model.rs  quality_report.rs
crates/mil-rs/src/: build_api.rs  c_api.rs  compiler.rs  error.rs  lib.rs  progress.rs  validate.rs  weights.rs
crates/mil-rs/tests/: cross_feature.rs  gguf_e2e.rs  integration.rs  llm_features.rs  moe_features.rs  onnx_conversion.rs  optimization_passes.rs  pipeline_features.rs  qwen_e2e.rs  safetensors_e2e.rs  test_model.rs
(+391 files in other folders)
