[workspace]
members = ["crates/mil-rs", "crates/ironmill-cli", "crates/ironmill-coreml", "crates/ironmill-ane", "crates/ironmill-bench"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/jafreck/ironmill"
rust-version = "1.85"

[workspace.dependencies]
mil-rs = { path = "crates/mil-rs", version = "0.1.0" }
ironmill-ane = { path = "crates/ironmill-ane", version = "0.1.0" }
prost = "0.13"
prost-build = "0.13"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
half = "2"
toml = "0.8"
glob-match = "0.2"
statrs = "0.18"
rand = "0.8"
safetensors = "0.7"
memmap2 = "0.9"
