[package]
name = "burn-coreml"
description = "CoreML model export and inference for Burn via mil-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["burn", "coreml", "apple", "machine-learning", "neural-engine"]

[dependencies]
mil-rs = { workspace = true }
anyhow = { workspace = true }
half = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
ironmill-coreml = { workspace = true }
