[package]
name = "ironmill-ane-sys"
description = "Low-level safe FFI bindings for Apple Neural Engine private APIs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }

[build-dependencies]
cc = { workspace = true }
