[package]
name = "ironmill-ane"
description = "ANE (Apple Neural Engine) direct runtime backend for ironmill"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mil-rs = { workspace = true }
ironmill-compile = { workspace = true }
ironmill-iosurface = { workspace = true }
ironmill-ane-sys = { workspace = true }
ironmill-runtime = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
half = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
int4 = []
