[package]
name = "ironmill-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ironmill-bench"
path = "src/main.rs"

[dependencies]
ironmill-compile = { workspace = true }
ironmill-inference = { path = "../ironmill-inference" }
ironmill-iosurface = { path = "../ironmill-iosurface", optional = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
statrs = { workspace = true }
half = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
ironmill-ane-sys = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mil-rs = { path = "../mil-rs" }
ironmill-metal-sys = { path = "../ironmill-metal-sys" }

[features]
default = []
ane-direct = ["dep:ironmill-iosurface"]
metal = ["ironmill-inference/metal"]
