[package]
name = "ironmill-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ironmill-bench"
path = "src/main.rs"

[dependencies]
ironmill-compile = { workspace = true }
ironmill-core = { workspace = true }
ironmill-inference = { path = "../ironmill-inference" }
ironmill-iosurface = { path = "../ironmill-iosurface", optional = true }
mil-rs = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
statrs = { workspace = true }
half = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
ironmill-ane-sys = { workspace = true }

[dev-dependencies]
ironmill-metal-sys = { path = "../ironmill-metal-sys" }

[features]
default = []
ane-direct = ["dep:ironmill-iosurface"]
metal = ["ironmill-inference/metal"]
mlx = ["ironmill-inference/mlx"]

[[example]]
name = "turboquant_e2e_bench"
path = "examples/turboquant_e2e_bench.rs"
required-features = ["ane-direct"]

[[example]]
name = "turboquant_bench"
path = "examples/turboquant_bench.rs"
required-features = ["ane-direct"]

[[example]]
name = "cache_bandwidth_bench"
path = "examples/cache_bandwidth_bench.rs"
required-features = ["ane-direct"]

[[example]]
name = "awq_calibrate"
path = "examples/awq_calibrate.rs"
required-features = ["metal"]
