[package]
name = "ironmill-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ironmill-bench"
path = "src/main.rs"

[dependencies]
ironmill-compile = { workspace = true }
ironmill-core = { workspace = true }
ironmill-inference = { workspace = true, features = ["coreml"] }
ironmill-iosurface = { workspace = true, optional = true }
mil-rs = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
statrs = { workspace = true }
half = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
ironmill-ane-sys = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ironmill-metal-sys = { workspace = true }

[[bench]]
name = "stats"
harness = false

[[bench]]
name = "perplexity_math"
harness = false

[[bench]]
name = "report_format"
harness = false

[features]
default = []
ane-direct = ["dep:ironmill-iosurface", "ironmill-inference/ane"]
metal = ["ironmill-inference/metal"]
gptq = ["ironmill-compile/gptq"]

[[example]]
name = "turboquant_e2e_bench"
path = "examples/turboquant_e2e_bench.rs"
required-features = ["ane-direct"]

[[example]]
name = "turboquant_bench"
path = "examples/turboquant_bench.rs"
required-features = ["ane-direct"]

[[example]]
name = "cache_bandwidth_bench"
path = "examples/cache_bandwidth_bench.rs"
required-features = ["ane-direct"]

[[example]]
name = "awq_calibrate"
path = "examples/awq_calibrate.rs"
required-features = ["metal"]
