[package]
name = "ironmill-compile"
description = "Compilation pipeline for ironmill — ANE lowering, CoreML build API, templates, and weight providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mil-rs = { workspace = true }
ironmill-ane-sys = { workspace = true }
ironmill-iosurface = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
indexmap = { workspace = true }
safetensors = { workspace = true }
memmap2 = { workspace = true }
glob-match = { workspace = true }
toml = { workspace = true }

[features]
c-api = []
