[package]
name = "ironmill-compile"
description = "Compilation pipeline for ironmill — ANE lowering, CoreML build API, templates, and weight providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ironmill-core = { workspace = true }
mil-rs = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
indexmap = { workspace = true }
safetensors = { workspace = true }
memmap2 = { workspace = true }
glob-match = { workspace = true }
toml = { workspace = true }

[features]
