[package]
name = "ironmill-core"
description = "Shared types for the ironmill workspace — bundle schemas, weight provider traits, and model configs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mil-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
half = { workspace = true }
