[package]
name = "ironmill-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Inference engine for ironmill (ANE + CoreML backends)"

[dependencies]
ironmill-core = { workspace = true }
mil-rs = { workspace = true }
ironmill-compile = { workspace = true, optional = true }
ironmill-ane-sys = { workspace = true }
ironmill-iosurface = { workspace = true }
ironmill-coreml-sys = { workspace = true }
ironmill-metal-sys = { workspace = true, optional = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
int4 = []
compile = ["dep:ironmill-compile"]
metal = ["dep:ironmill-metal-sys"]

[[example]]
name = "ane_op_eval"
path = "examples/ane_op_eval.rs"
required-features = ["compile"]

[[example]]
name = "cache_bandwidth_bench"
path = "examples/cache_bandwidth_bench.rs"
required-features = ["compile"]

[[example]]
name = "turboquant_bench"
path = "examples/turboquant_bench.rs"
required-features = ["compile"]

[[example]]
name = "turboquant_e2e_bench"
path = "examples/turboquant_e2e_bench.rs"
required-features = ["compile"]
