[package]
name = "ironmill-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Inference engine for ironmill (ANE + CoreML backends)"

[dependencies]
ironmill-core = { workspace = true }
mil-rs = { workspace = true }
ironmill-ane-sys = { workspace = true, optional = true }
ironmill-iosurface = { workspace = true, optional = true }
ironmill-coreml-sys = { workspace = true, optional = true }
ironmill-metal-sys = { workspace = true, optional = true }
ironmill-mlx-sys = { workspace = true, optional = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["coreml", "ane"]
int4 = []
metal = ["dep:ironmill-metal-sys"]
mlx = ["dep:ironmill-mlx-sys"]
ane = ["dep:ironmill-ane-sys", "dep:ironmill-iosurface"]
coreml = ["dep:ironmill-coreml-sys"]
async = ["dep:tokio"]

[dependencies.tokio]
version = "1"
features = ["sync", "rt"]
optional = true

[[example]]
name = "ane_op_eval"
path = "examples/ane_op_eval.rs"
