[package]
name = "ironmill-mlx-sys"
description = "Safe Rust bindings to mlx-c (Apple MLX C API)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
half = { workspace = true }

[build-dependencies]
bindgen = "0.71"
cmake = "0.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(mlx_stub)'] }
