[package]
name = "mil-rs"
description = "Read, write, and manipulate Apple CoreML models in Rust — no Python required"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["coreml", "apple", "machine-learning", "protobuf", "mil"]
categories = ["science", "encoding", "parser-implementations"]

[dependencies]
prost = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
half = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
