[package]
name = "mil-rs"
description = "Read, write, and manipulate Apple CoreML models in Rust — no Python required"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["coreml", "apple", "machine-learning", "protobuf", "mil"]
categories = ["science", "encoding", "parser-implementations"]

[dependencies]
prost = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
half = { workspace = true }
toml = { workspace = true }
glob-match = { workspace = true }
rand = { workspace = true }
statrs = { workspace = true }
safetensors = { workspace = true }
memmap2 = { workspace = true }
ironmill-ane-sys = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "passes"
harness = false

[[bench]]
name = "weight_formats"
harness = false

[features]
ane-direct = ["dep:ironmill-ane-sys"]
c-api = []

[build-dependencies]
prost-build = { workspace = true }
